# chatbot-backend

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml  readme.md  requirements.txt
app/: main.py
app/api/: __init__.py  bot_info.py  chat.py
app/core/: auth.py  config.py  constants.py  logger.py
app/crud/: __init__.py  bot_info.py  chat.py
app/database/: mongodb.py
app/models/: base.py  bot_info.py  conversation.py
app/schemas/: bot.py  chat.py
app/services/: __init__.py  bot_info.py  chat.py
tests/: conftest.py  test_bot_info.py  test_chat.py
